--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  Hello world
-  <script src="script.js"></script>
-</body>
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <title>em</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/mjr8eme.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <div class="ime-page">
+      <div class="ime-page-inner">
+        <div class="ime-page-content-container">
+          <div class="ime-title-container">
+            <li>Em,<br>Tāmaki Makaurau</li>
+            <li><a href="mailto:ime.ko022@gmail.com?subject=Enquiry" target="_blank">Contact</a>
+          </div>
+          <!-- <img src="https://f4.bcbits.com/img/0028918331_100.png"> -->
+          <div id="logo" class="ime-project-container">
+            <div class="ime-project-image">
+              <img src="https://i.ibb.co/WzHC7LV/M.png">
+            </div>
+          </div>
+          <div class="ime-project-container">
+            <div class="ime-project-text">
+              <li><a href="loader.html">ime</a>
+                <li><a href="matt.html">matt (archive)</a>
+            </div>
+          </div>
+        <div class="ime-project-container">
+          <div class="ime-project-text">
+            <a href="control.html" target="_blank">rat king</a>
+          </div>
+          <div class="ime-project-image">
+            <a href="control.html" target="_blank">
+            <img class="ime-image-shadow" src="https://f4.bcbits.com/img/a3026575458_16.jpg"></a>
+          </div>
+        </div>
+        <div class="ime-project-container">
+          <div class="ime-project-text">
+            <a href="tg.html" target="_blank">top goblin</a></div>
+          <div class="ime-project-image">
+            <a href="tg.html" target="_blank">
+            <img class="ime-image-blur-1" src="https://i.ibb.co/ZxHC40T/goblin.png"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+    <div class="ime-footer"></div>
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
