--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="ime-project-container">
             <div class="ime-project-text">
               <li><a href="loader.html">ime</a>
-                <li><a href="matt.html">matt (archive)</a>
+                <li><a href="pages/matt.html">matt (archive)</a>
             </div>
           </div>
         <div class="ime-project-container">
