--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
         <div class="ime-project-container">
           <div class="ime-project-text">
-            <a href="tg.html" target="_blank">top goblin</a></div>
+            <a href="https://amandagamlen.github.io/tg/" target="_blank">top goblin</a></div>
           <div class="ime-project-image">
-            <a href="tg.html" target="_blank">
+            <a href="https://amandagamlen.github.io/tg/" target="_blank">
             <img class="ime-image-blur-1" src="https://i.ibb.co/ZxHC40T/goblin.png"></a>
           </div>
         </div>
