--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           </div>
         <div class="ime-project-container">
           <div class="ime-project-text">
-            <a href="control.html" target="_blank">rat king</a>
+            <a href="https://amandagamlen.github.io/ratking/" target="_blank">rat king</a>
           </div>
           <div class="ime-project-image">
-            <a href="control.html" target="_blank">
+            <a href="https://amandagamlen.github.io/ratking/" target="_blank">
             <img class="ime-image-shadow" src="https://f4.bcbits.com/img/a3026575458_16.jpg"></a>
           </div>
         </div>
