--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
           <div class="ime-project-container">
             <div class="ime-project-text">
-              <li><a href="loader.html">ime</a>
+              <li><a href="pages/ime.html">ime</a>
                 <li><a href="pages/matt.html">matt (archive)</a>
             </div>
           </div>
