--- a/pages/ime.html
+++ b/pages/ime.html
@@ -8,7 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/mjr8eme.css">
     <!-- <script src="script.js"></script> -->
-    <style>body {
+    <style>
+    body {
       margin: 0;
       padding: 0;
       width: 100%;
@@ -359,7 +360,7 @@
         <div class="ime-page-content-container">
           <div class="ime-title-container">
             <li>Em,<br>Tāmaki Makaurau</li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="https://amandagamlen.github.io/em/">Home</a></li>
           </div>
           <div class="ime-project-container">
             <div class="ime-project-text"> <a target="blank" href="https://soundcloud.com/ime000/tracks">Tracks</a> (ime)</div>
