--- a/pages/ime.html
+++ b/pages/ime.html
@@ -363,13 +363,13 @@
             <li><a href="https://amandagamlen.github.io/em/">Home</a></li>
           </div>
           <div class="ime-project-container">
-            <div class="ime-project-text"> <a target="blank" href="https://soundcloud.com/ime000/tracks">Tracks</a> (ime)</div>
+            <div class="ime-project-text"> <a target="blank" href="https://soundcloud.com/ime000/tracks">Tracks</a>(ime)</div>
             <div class="ime-project-image">
-              <a href="garahge.html"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-OPxhyNPyCuDund6X-GHPWsA-t500x500.jpg"></a></div>
+              <a href="https://amandagamlen.github.io/garahge"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-OPxhyNPyCuDund6X-GHPWsA-t500x500.jpg"></a></div>
               <div class="ime-project-image">
-                <a href="pocket.html"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-1CRTQRUjBjDfIbX5-F42Ijw-t500x500.jpg"></a></div>
+                <a href="https://amandagamlen.github.io/pocket"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-1CRTQRUjBjDfIbX5-F42Ijw-t500x500.jpg"></a></div>
               <div class="ime-project-image">
-                <a href="fms.html"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-Cn2HQ0zm8Z1eQxk8-PAuyeg-t500x500.jpg"></a>
+                <a href="https://amandagamlen.github.io/fms"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-Cn2HQ0zm8Z1eQxk8-PAuyeg-t500x500.jpg"></a>
             </div>
           </div>
           
