--- a/pages/ime.html
+++ b/pages/ime.html
@@ -378,11 +378,11 @@
           <div class="ime-project-container">
             <div class="ime-project-text"> <a target="blank" href="https://soundcloud.com/ime000/albums">Albums</a> (ime)</div>
             <div class="ime-project-image">
-              <a href="haste.html"><img class="ime-image-shadow" src="https://i.ibb.co/wwvTw3b/rh.png"></a></div>
+              <a href="https://amandagamlen.github.io/haste"><img class="ime-image-shadow" src="https://i.ibb.co/wwvTw3b/rh.png"></a></div>
               <div class="ime-project-image">
-                <a href="id.html"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-s8DE6J05IHxJI51A-U1c6NQ-t500x500.jpg"></a> </div>
+                <a href="https://amandagamlen.github.io/id_03"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-s8DE6J05IHxJI51A-U1c6NQ-t500x500.jpg"></a> </div>
               <div class="ime-project-image">
-                <a href="cycles.html"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-000582203852-cieapv-t500x500.jpg"></a></div>
+                <a href="https://amandagamlen.github.io/cycles"><img class="ime-image-shadow" src="https://i1.sndcdn.com/artworks-000582203852-cieapv-t500x500.jpg"></a></div>
 
             </div>
           </div>
