--- a/pages/ime.html
+++ b/pages/ime.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- <link rel="stylesheet" href="/style.css"> -->
     <title>ime.</title>
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico?">
+    <link rel="icon" type="image/x-icon" href="/em/assets/favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
     <link rel="stylesheet" href="https://use.typekit.net/mjr8eme.css">
     <!-- <script src="script.js"></script> -->
