--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
           </div>
           <div class="ime-project-container">
             <div class="ime-project-text">
-              <li><a href="pages/ime.html">ime</a>
-                <li><a href="pages/matt.html">matt (archive)</a>
+              <li><a href="https://amandagamlen.github.io/load">ime</a>
+                <li><a href="pages/matt">matt (archive)</a>
             </div>
           </div>
         <div class="ime-project-container">
